overflow container issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,7 @@ p.para {
     border-bottom: none;
     margin-left: 85px;
     width: calc(100% - 85px);
+    overflow: hidden;
 }
 
 .content {
